# funny_projects

ahk/: lifesaver.ahk
chess/: board.py  figures.py  main.py
cpp/3d_rendering/: CMakeLists.txt  main.cpp
cpp/3d_rendering/inc/: config.h  player.h  util.h
cpp/3d_rendering/src/: player.cpp  util.cpp
cpp/Hangman/: main  main.cpp  man  man.cpp  man.h
cpp/HelloWorld/: helloWorld  helloWorld.cpp
cpp/gui/: gui  gui.cpp
csharpgibb/cars/: Program.cs  Truck.cs  car.cs
csharpgibb/tictactoe/: NeuralNetwork.cs  Program.cs  board.cs
csharpgibb/weather_data/: Program.cs  Wetterdaten2011.csv
py/bricksNwater/: bricksNwater.py  bricksNwaterA2.py  bricksNwaterA3.py
py/comparis_map_creator/: comparis.py  comparisMapCreator.py  requirements.txt  siteScraper.py
py/minegame/: entitiy.py  entity.py  environment.py  img_loader.py  main.py  player.py  resource_collect.py  storage.py  test.py  transport.py
py/pascalTriangle/: pascalsTriangle.py
py/pygame/: pygame_1.py
py/snake/: snake_selfrunning.py
pygame/: pygame_1.py
snake/: snake.py
